--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ Name = "LuLinLu"
 HeaderUsername = "Mr.LU"
 HeaderUserName = "Mr.LU"
 About = "醉里挑灯看剑，梦回吹角连营。八百里分麾下炙，五十弦翻塞外声。沙场秋点兵。马作的卢飞快，弓如霹雳弦惊。了却君王天下事，赢得生前身后名。可怜白发生"
-ProfilePicture = "/avatar.jpg"
+ProfilePicture = "https://lulinlu.oss-cn-beijing.aliyuncs.com/2019/09/17/avatar.jpg"
 Email = "lulinye@gmail.com"
 GithubID = "LuLinLu"
 [menu]
